--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "bootstrap": "^5.2.3",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
